# 2DSofwareRenderer

./: .gitignore  CMakeLists.txt  LICENSE
OpenGLWrapper/: main.cpp
SoftRendererLib/: CMakeLists.txt  CMakeSources.cmake  aarch64-linux.gnu.cmake
SoftRendererLib/src/: CMakeLists.txt
SoftRendererLib/src/core/: CMakeLists.txt  Context2D.cpp  Context2D.h  RenderContext2D.cpp  RenderContext2D.h  RendererBase.cpp  RendererBase.h
SoftRendererLib/src/core/Renderers/: BasicTextureRenderer.cpp  BasicTextureRenderer.h  CMakeLists.txt  PrimitivesRenderer.cpp  PrimitivesRenderer.h  ScaleTextureRenderer.cpp  ScaleTextureRenderer.h  TransformedTextureRenderer.cpp  TransformedTextureRenderer.h
SoftRendererLib/src/data/: BlendMode.cpp  BlendMode.h  CMakeLists.txt  Color.cpp  Color.h  Texture.cpp  Texture.h  Transform.h
SoftRendererLib/src/data/BlendMode/: BlendFunctions.cpp  BlendFunctions.h  BlendMode.h  CMakeLists.txt
SoftRendererLib/src/data/BlendMode/Platform/arm_neon/: BlendFunctions.cpp
SoftRendererLib/src/data/BlendMode/Platform/generic/: BlendFunctions.cpp
SoftRendererLib/src/data/PixelFormat/: CMakeLists.txt  PixelConverter.cpp  PixelConverter.h  PixelFormat.h  PixelFormatInfo.cpp  PixelFormatInfo.h
SoftRendererLib/src/data/PixelFormat/Optimized/: PixelConverter.cpp
SoftRendererLib/src/data/PixelFormat/Platform/arm_neon/: PixelConverter.cpp
SoftRendererLib/src/data/PixelFormat/Platform/generic/: PixelConverter.cpp
SoftRendererLib/src/data/PixelFormat/PlatformInd/: PixelConverter.cpp
SoftRendererLib/src/include/: SoftRenderer.h
SoftRendererLib/src/util/: MemHandler.cpp  MemHandler.h
SoftRendererLinuxDemo/: main.cpp
SoftRendererTest/: main.cpp
scripts/: imageco.py
